--- a/ogranizED/app/src/main/res/layout/activity_generic_activity.xml
+++ b/ogranizED/app/src/main/res/layout/activity_generic_activity.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="wrap_content">
-<LinearLayout
+
+    <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -15,7 +16,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/subject_name"
-        android:textSize="30pt"/>
+        android:textSize="30pt"
+        android:textColor="@color/colorPrimaryDark"
+        android:fontFamily="sans-serif-condensed"/>
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,5 +27,6 @@
 
     </android.support.v7.widget.RecyclerView>
 
-</LinearLayout>
+    </LinearLayout>
+
 </ScrollView>
