--- a/ogranizED/app/src/main/res/layout/activity_main2.xml
+++ b/ogranizED/app/src/main/res/layout/activity_main2.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:padding="30dp"
     tools:context="com.example.myapp1.ogranized.Main2Activity">
 
@@ -12,8 +13,11 @@
         android:layout_height="40dp"
         android:id="@+id/tv1"
         android:text="Enter book name"
-        android:textSize="25sp"
+        android:textSize="30sp"
+        android:textColor="@color/colorPrimary"
+        android:fontFamily="sans-serif-condensed"
         android:layout_gravity="center"
+        android:layout_marginBottom="20pt"
         />
     <EditText
         android:layout_marginTop="20dp"
@@ -25,10 +29,13 @@
 
 <Button
     android:layout_marginTop="30dp"
-    android:layout_width="150dp"
-    android:layout_height="60dp"
+    android:layout_width="180dp"
+    android:layout_height="70dp"
     android:layout_gravity="center"
     android:text="@string/create"
+    android:textSize="20dp"
+    android:fontFamily="sans-serif-condensed"
+    android:textColor="@color/colorPrimary"
     android:id="@+id/button"
     android:padding="5dp"/>
 </LinearLayout>
