--- a/ogranizED/app/src/main/res/layout/content_main.xml
+++ b/ogranizED/app/src/main/res/layout/content_main.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,4 +19,4 @@
         android:id="@+id/recycler">
     </android.support.v7.widget.RecyclerView>
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
