--- a/ogranizED/app/src/main/res/layout/file_layout.xml
+++ b/ogranizED/app/src/main/res/layout/file_layout.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="120dp">
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/main_file_display"/>
-</LinearLayout>
+        android:layout_height="100dp"
+        android:id="@+id/main_file_display"
+        android:fontFamily="sans-serif-condensed"/>
+    <ImageButton
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/ic_stat_name"
+        android:scaleType="fitXY"
+        android:id="@+id/options"
+        android:background="#000"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/main_file_display"
+        />
+</RelativeLayout>
