--- a/ogranizED/app/src/main/res/values/colors.xml
+++ b/ogranizED/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#152459</color>
+    <color name="colorAccent">#ff8a01</color>
+    <color name="background">#F8F9F9</color>
+
 </resources>
